# VoiceAI

backend/: .env  alembic.ini  dependencies.py  main.py  pyproject.toml  scheduler.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 3a2951f8ff2e_create_voice_agents_and_knowledge_bases.py  bbe3a1901cd4_user_model_relationship_with_voice_agent.py  d2366e107a6a_add_agent_name_and_unique_constraint_to_.py  dd48902efa5b_voice_agent_phone_number_can_be_.py  efcddfa694ac_changed_column_type_of_agent_id_to_.py
backend/clients/: elevenlabs_client.py
backend/models/: auth.py  voiceagents.py
backend/routes/: agent_management.py  auth.py  outbound.py
backend/schemas/: agent_management.py  auth.py  outbound.py
backend/services/: agent_management.py  auth.py  outbound.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Dashboard.js  Login.js  Navbar.js  Register.js  Welcome.js
frontend/src/contexts/: AuthContext.js
frontend/src/services/: api.js
